# TinyAPI-educational-mini-framework

./: .coverage  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: 01_hello_world.py  02_path_params.py  03_query_params.py  04_dependencies.py  05_async.py  06_middleware.py  07_json_body.py
tests/: test_tinyapi.py
tinyapi/: __init__.py  app.py  dependencies.py  params.py  request.py  response.py  routing.py  server.py
