[project]
name = "tinyapi"
version = "0.1.0"
description = "Vzdělávací mini-framework inspirovaný FastAPI"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
