[project]
name = "tinyapi"
version = "0.1.0"
description = "Vzdělávací mini-framework inspirovaný FastAPI"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
addopts = "--cov=tinyapi --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["tinyapi"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
